# PotatoPresenter

./: .gitignore  .syntaxTest.kate-swp  CMakeLists.txt  Dockerfile  README.md  arrowbox.cpp  arrowbox.h  bigtextfield.cpp  bigtextfield.h  bodytext.cpp  bodytext.h  box.cpp  box.h  boxgeometry.cpp  boxgeometry.h  boxrect.cpp  boxrect.h  boxtransformation.cpp  boxtransformation.h  cachemanager.h  configboxes.cpp  configboxes.h  drawtext.cpp  drawtext.h  equationcachemanager.cpp  equationcachemanager.h  files.qrc  formatetext.cpp  formatetext.h  frame.cpp  frame.h  framelistdelegate.cpp  framelistdelegate.h  framelistmodel.cpp  framelistmodel.h  imagebox.cpp  imagebox.h  imagecachemanager.cpp  imagecachemanager.h  input.json  (+35 more)
build_AppImage/: Dockerfile  Readme  build.sh  build_appimage.sh
docker_test/: Readme  build.sh
src/: files.qrc  potato.xml  version.h.in
src/antlr/: markdown.g4
src/antlr/markdown/: generate.sh  markdown.g4
src/antlr/potato/: generate.sh  potato.g4
src/core/: boxgeometry.cpp  boxgeometry.h  cachemanager.cpp  cachemanager.h  codehighlighter.cpp  codehighlighter.h  configboxes.cpp  configboxes.h  equationcachemanager.cpp  equationcachemanager.h  frame.cpp  frame.h  framepainter.cpp  framepainter.h  generaterLatex.tex  grammartest.cpp  grammartest.h  latexcachemanager.cpp  latexcachemanager.h  layout.h  main.cpp  markdownFormatVisitor.cpp  markdownFormatVisitor.h  markdownListenerClass.cpp  markdownListenerClass.h  markdownerrorlistener.cpp  markdownerrorlistener.h  markdownformatvisitor.cpp  markdownformatvisitor.h  markdowntest.cpp  markdowntest.h  painter.cpp  painter.h  parser.cpp  parser.h  pdfcreator.cpp  pdfcreator.h  potatoerrorlistener.cpp  potatoerrorlistener.h  potatoformatvisitor.cpp  (+21 more)
src/core/boxes/: arrowbox.cpp  arrowbox.h  box.cpp  box.h  boxgeometry.cpp  boxgeometry.h  cachemanager.cpp  cachemanager.h  codebox.cpp  codebox.h  drawtext.h  equationcachemanager.cpp  equationcachemanager.h  formatetext.cpp  formatetext.h  formattedTextRenderer.cpp  formattedTextRenderer.h  generaterLatex.tex  generaterLatexBox.tex  geometrybox.cpp  geometrybox.h  imagebox.cpp  imagebox.h  latexbox.cpp  latexbox.h  linebox.cpp  linebox.h  markdowntextbox.cpp  markdowntextbox.h  plaintextbox.cpp  plaintextbox.h  sectionpreviewbox.cpp  sectionpreviewbox.h  tableofcontentsbox.cpp  tableofcontentsbox.h  textbox.cpp  textbox.h
src/templates/astro/: demo.json  demo.potato  template.json  template.potato  template.txt
src/templates/astro2/: demo.json  demo.txt  template.json  template.potato  template.txt
src/templates/green_lines/: demo.potato  template.json  template.txt
src/templates/logo/: demo.json  demo.potato  template.json  template.potato  template.txt
src/templates/red/: demo.json  demo.potato  demo.txt  template.json  template.txt
src/templates/red_line/: demo.json  demo.txt  template.json  template.potato  template.txt
src/templates/tutorial/: demo.json  demo.potato  demo.txt  template.json  template.txt
src/ui/: boxtransformation.cpp  boxtransformation.h  framelistdelegate.cpp  framelistmodel.cpp  framelistmodel.h  framewidget.cpp  framewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintdocument.cpp  paintdocument.h  slidelistdelegate.cpp  slidelistdelegate.h  slidelistmodel.cpp  slidelistmodel.h  slidewidget.cpp  slidewidget.h  snapping.cpp  snapping.h  templatelistdelegate.cpp  templatelistdelegate.h  templatelistmodel.cpp  templatelistmodel.h  transformboxundo.h  utils.cpp  utils.h
template/: sven.json  sven.txt
